fixed login ui alignment, paddings etc

--- a/workship-login/scss/_responsive.scss
+++ b/workship-login/scss/_responsive.scss
@@ -86,6 +86,12 @@
     &__fact{
       margin-bottom: 2rem;
     }
+
+    &-wrap{
+      .col-lg-6{
+       flex: 0 0 100%;
+      }
+    }
   }
 
 }
